# slingscold

./: CMakeLists.txt  README.md  Slingscold.vala
budgie/slingscold-budgie-applet/: CMakeCache.txt  CMakeLists.txt  Makefile  Slingscold.c  Slingscold.plugin  Slingscold.vala  cmake_install.cmake  install_manifest.txt
frontend/: Utilities.vala
frontend/widgets/: Indicators.vala  Searchbar.vala
